ts-44: ide fixes